Bug 446966 - custom splash screen under wayland not used - breeze instead
Summary: custom splash screen under wayland not used - breeze instead
Status: RESOLVED FIXED
Alias: None
Product: ksplash
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: master
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression, wayland-only
: 449438 449829 449833 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-12-14 10:42 UTC by Robby Engelmann
Modified: 2022-02-10 20:26 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Engelmann 2021-12-14 10:42:36 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. select another splash theme than breeze
2. login into wayland session

OBSERVED RESULT
see breeze splash

EXPECTED RESULT
see selected splash

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20211213
KDE Plasma Version: 5.23.80
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2
Kernel Version: 5.15.7-1-default (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-10510U CPU @ 1.80GHz
Memory: 31.0 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics
Comment 1 Linus Dierheimer 2022-01-15 11:21:45 UTC
Can confirm (Archlinux, 5.23.90, 5.90.0, 5.15.2)
Comment 2 Pawel 2022-02-01 20:45:55 UTC
*** Bug 449438 has been marked as a duplicate of this bug. ***
Comment 3 Bug Janitor Service 2022-02-09 19:24:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1444
Comment 4 David Edmundson 2022-02-10 10:02:36 UTC
Git commit 3a9b196ca63ae6d63abf67a504648db084abccf4 by David Edmundson, on behalf of Linus Dierheimer.
Committed on 10/02/2022 at 10:02.
Pushed by davidedmundson into branch 'master'.

Fix ksplash always using default theme.

Explicitly tell ksplashqml which config file to use

M  +4    -0    ksplash/ksplashqml/main.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/3a9b196ca63ae6d63abf67a504648db084abccf4
Comment 5 David Edmundson 2022-02-10 13:47:40 UTC
Git commit 12f8228d487820817d77bdb5cf56da117dfee35a by David Edmundson, on behalf of Linus Dierheimer.
Committed on 10/02/2022 at 13:47.
Pushed by davidedmundson into branch 'Plasma/5.24'.

Fix ksplash always using default theme.

Explicitly tell ksplashqml which config file to use


(cherry picked from commit 3a9b196ca63ae6d63abf67a504648db084abccf4)

M  +4    -0    ksplash/ksplashqml/main.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/12f8228d487820817d77bdb5cf56da117dfee35a
Comment 6 Patrick Silva 2022-02-10 20:25:49 UTC
*** Bug 449829 has been marked as a duplicate of this bug. ***
Comment 7 Patrick Silva 2022-02-10 20:26:00 UTC
*** Bug 449833 has been marked as a duplicate of this bug. ***