Fix ksplash always using default theme.

Explicitly tell ksplashqml which config file to use

BUG: 446966